manifests/network-policy.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: httpbin-network-policy
spec:
  podSelector:
    matchLabels:
      app: httpbin
  policyTypes:
  - Ingress
  ingress:
  - from:
    - ipBlock:
        cidr: 10.130.0.0/21  # VPC CIDR
    ports:
    - protocol: TCP
      port: 80
